# template-rust

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.github/: dependabot.yaml
.github/workflows/: lints.yaml  nix.yaml  rust.yaml
cli/: Cargo.toml
devshell/: container.nix  default.nix  package.nix
src/: main.rs
