[workspace.package]
version = "0.0.0"
authors = ["THXLAB PTE. LTD. <contact@thxlab.io>"]
homepage = "https://thxnet.org/"
repository = "https://github.com/thxnet/kallax"
license = "GPL-3.0-only"
edition = "2021"
description = "Utilities for setting up and managing Substrate-based blockchains"
categories = ["command-line-utilities"]
keywords = ["substrate"]

[package]
name = "temlate-rust"
readme = "README.md"
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "temlate-rust"
path = "src/main.rs"

[dependencies]
template-rust-cli = { path = "./cli" }

[workspace]
members = [
    "cli",
]

