[workspace.package]
version = "0.0.0"
authors = ["THXLAB PTE. LTD. <contact@thxlab.io>"]
homepage = "https://thxnet.org/"
repository = "https://github.com/thxnet/template-rust"
readme = "README.md"
license = "GPL-3.0-only"
edition = "2021"
description = "Rust template of THXLAB"
categories = ["command-line-utilities"]
keywords = ["template"]

[package]
name = "temlate-rust"
version.workspace = true
readme.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true
description.workspace = true
categories.workspace = true
keywords.workspace = true

[[bin]]
name = "temlate-rust"
path = "src/main.rs"

[dependencies]
template-rust-cli = { path = "./cli" }

[workspace]
members = [
    "cli",
]

